--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "lodash": "^4.17.4",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
+    "react-redux": "^5.0.5",
     "react-router": "^1.0.3",
+    "redux": "^3.7.1",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^4.3.0",
+    "redux-thunk": "^2.2.0",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.1"
   },
